objects/Ace_Customer_SKU_Changes__c.object
<CustomObject>
    <fields>
        <fullName>Owning_Customer_Annual_Sales_Volume__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Owning Customer Annual Sales Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owning_Customer_Corelist_Priority__c</fullName>
        <label>Owning Customer Corelist Priority</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owning_Customer_ID__c</fullName>
        <label>Owning Customer ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owning_Customer_Legal__c</fullName>
        <description>Vendavo
Corelist
SpecialHandling</description>
        <label>Owning Customer Legal</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owning_Customer_Name__c</fullName>
        <label>Owning Customer Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owning_Customer_Type__c</fullName>
        <label>Owning Customer Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRICE_NOT_CALCULATED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PRICE NOT CALCULATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROCESSING_ALLOWED__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Processing allowed flag for SFDC to Vendavo consolidation</description>
        <label>PROCESSING_ALLOWED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Exception_Impact__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Previous Exception Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Change_ID__c</fullName>
        <description>This field holds the ace_Customer_price_change object reference, created to fix performance issue with queries that are trying to travering 2 relations up to pull this info.</description>
        <label>Price Change ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Change_Type__c</fullName>
        <formula>IF(TEXT(Status__c) == &apos;Deleted&apos;,&apos;D&apos;,Price_Changes_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Change Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Changes_Type1__c</fullName>
        <formula>IF( AND( Price_Changes_Type__c=&apos;M&apos;, Margin_Play__c=&apos;L&apos;), &apos;Margin Lift&apos;,
IF( AND( Price_Changes_Type__c=&apos;M&apos;, Margin_Play__c=&apos;S&apos;), &apos;Margin Swap&apos;,
IF( Margin_Play__c=&apos;A&apos;, &apos;Assortment Swap&apos;,
IF( Price_Changes_Type__c=&apos;C&apos;, &apos;Cost&apos;,
IF( Price_Changes_Type__c=&apos;A&apos;, &apos;Alternate&apos;, &apos;&apos;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Changes_Type__c</fullName>
        <label>Price Changes Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Comparison__c</fullName>
        <formula>MIN(Approved_Proposed_Price__c, Proposed_Price_with_Cap__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Comparison</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Exception_Revenue_Impact__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Revenue Impact captured in SFDC due to price changes by Rep</description>
        <label>Price Exception Revenue Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing_Method_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Vendavo
Corelistlineitem
Coreadjusted_amount</description>
        <label>Pricing Method Percentage</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Projected_Margin_12_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Projected Margin 12 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Margin_3_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Projected Margin 3 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Margin_6_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Projected Margin 6 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Margin__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Projected Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_New_List_Less_Disc_Without_Cap__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Proposed New List Less Disc% Without Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_Price_Without_Cap__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Proposed Price Without Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This will be changed by the Rep if he is proposing the New Price _if Approval is needed after approval this value will be copied to &quot;Approved Proposed Price&quot;, If no approval needed then workflow has to update the &quot;Approved Proposed Price&quot;-This field will be used in all the UI</description>
        <label>Proposed Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_Price_with_Cap__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This  value come from ACE as an Inbound MSG Data Process</description>
        <label>Proposed Price with Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_SRM_with_Cap1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Proposed SRM $ with Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_SRM_with_Cap__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Proposed SRM% with Cap</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Proposed_WAPO_Margin_with_Cap1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Proposed WAPO Margin $ with Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_WAPO_Margin_with_Cap__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Proposed WAPO Margin % with Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>QPU__c</fullName>
        <label>QPU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RSD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_SKU_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_For_Exception_Request__c</fullName>
        <label>Reason For Exception Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Written Agreement Compliance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommended_Action__c</fullName>
        <label>Recommended Action</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommended_Deletion__c</fullName>
        <label>Recommended Deletion</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Lock_Code__c</fullName>
        <label>Record Lock Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The status on the record will be used to lock it from being updated</description>
        <label>Record Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer SKU Changes (Related Account)</relationshipLabel>
        <relationshipName>Customer_SKU_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Contract_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contract Number</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Customer SKU Changes</relationshipLabel>
        <relationshipName>Customer_SKU_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Contract_Pricing_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contract Pricing Term</label>
        <referenceTo>Contract_Pricing_Terms__c</referenceTo>
        <relationshipLabel>Customer SKU Changes</relationshipLabel>
        <relationshipName>Customer_SKU_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remediation_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag if marked true will not allow data to be released to vendavo. The flag will be unset when the data is loaded back in by remediation team.</description>
        <label>Remediation Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_New_Gross_IGM_ACE__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used in reports, stores the original value from ACE and is not updated.</description>
        <label>Report New Gross IGM ACE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Report_Total_Spend_Impact_12_Month_ACE__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used in Reports and stores the original value from ACE</description>
        <label>Report Total Spend Impact 12 Month ACE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Approved_Price__c</fullName>
        <formula>Approved_Proposed_Price__c &lt; Proposed_Price_with_Cap__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Approved Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Approved_Without_Cap_Price__c</fullName>
        <formula>Approved_Proposed_Price__c &lt; Proposed_Price_Without_Cap__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Approved Without Cap Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Erosion_Field_MarkDown__c</fullName>
        <formula>IF( Approved_Proposed_Price__c &lt;  Proposed_Price_with_Cap__c ,(Proposed_Price_with_Cap__c-Approved_Proposed_Price__c)* Item_12_Month_Qty__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Erosion Field MarkDown</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Erosion_Margin_CAP__c</fullName>
        <formula>((Proposed_Price_Without_Cap__c - New_WATD_Cost__c)-Proposed_SRM_with_Cap1__c)*Item_12_Month_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Erosion Margin CAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Erosion_Margin_Field_MarkDown__c</fullName>
        <formula>IF( Approved_Proposed_Price__c &lt; Proposed_Price_with_Cap__c ,((Proposed_Price_with_Cap__c-Current_WATD_Cost__c)-(Approved_Proposed_Price__c-Current_WATD_Cost__c))* Item_12_Month_Qty__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Erosion Margin Field MarkDown</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Erosion_Margin__c</fullName>
        <description>Used in Reporting - Vendor letter, Timing Erosion</description>
        <formula>(Proposed_SRM_with_Cap1__c-Old_WATD_SRM1__c)* Item_12_Month_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Erosion Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Erosion_Revenue_CAP__c</fullName>
        <formula>Cap_Lost_Margin_Dollar__c * Item_12_Month_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Erosion Revenue CAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Erosion_Revenue__c</fullName>
        <formula>New_Sell_Price_Dollar_Change_Amount__c * Item_12_Month_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Erosion Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Exception_Field_MarkDown__c</fullName>
        <formula>IF(  Proposed_Price__c  &lt; Proposed_Price_with_Cap__c ,(Proposed_Price_with_Cap__c-Proposed_Price__c)* Item_12_Month_Qty__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Exception  Field MarkDown</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Exception_Mgn_Field_MarkDown__c</fullName>
        <formula>IF( Proposed_Price__c &lt; Proposed_Price_with_Cap__c ,((Proposed_Price_with_Cap__c-Current_WATD_Cost__c)-(Proposed_Price__c-Current_WATD_Cost__c))* Item_12_Month_Qty__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Exception Mgn Field MarkDown</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_ExposureDaysEarly_Sale_Erosion__c</fullName>
        <formula>IF(Sales_Price_Change_Effective_Date_Approv__c!=null,
IF(Sales_Price_Change_Effective_Date_Approv__c&lt;Sales_Price_Change_Effective_Date__c ,
 (Sales_Price_Change_Effective_Date__c - Sales_Price_Change_Effective_Date_Approv__c),0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting ExposureDaysEarly Sale Erosion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reporting_Exposure_Days_Initial__c</fullName>
        <formula>IF( Sales_Price_Change_Effective_Date_Approv__c==Sales_Price_Change_Effective_Date__c ,
 IF(Reporting_Quarter_Start_Date__c!=null,(Sales_Price_Change_Effective_Date__c -  Reporting_Quarter_Start_Date__c),0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Exposure Days Initial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reporting_Exposure_Days_Sale_Erosion__c</fullName>
        <formula>IF(Sales_Price_Change_Effective_Date_Approv__c!=null,
IF(Sales_Price_Change_Effective_Date_Approv__c&gt;Sales_Price_Change_Effective_Date__c ,
 (Sales_Price_Change_Effective_Date_Approv__c-Sales_Price_Change_Effective_Date__c),0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Exposure Days Sale Erosion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reporting_Passed_Margin__c</fullName>
        <formula>Approved_Proposed_Price__c -  New_WATD_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Passed Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Price_Modified_By_Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting Price Modified By Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Prosposed_Margin__c</fullName>
        <formula>(Proposed_Price_Without_Cap__c-New_WATD_Cost__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Prosposed Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Quarter_End_Date__c</fullName>
        <description>Needed for ACE Reporting</description>
        <label>Reporting_Quarter End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporting_Quarter_Start_Date__c</fullName>
        <description>It is needed for Reporting</description>
        <label>Reporting_Quarter Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Key__c</fullName>
        <label>Request Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requirement_Window__c</fullName>
        <label>Requirement Window</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retail_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Retail Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SFDC_Contract_Object_Customer_ID__c</fullName>
        <label>SFDC Contract Object Customer ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Contract_Object_ID__c</fullName>
        <label>SFDC Contract Object ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Notification_Flag__c</fullName>
        <label>SFDC Notification Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Add_Notif_Req__c</fullName>
        <label>SKU Add Notif Req</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Alt__c</fullName>
        <label>SKU Alt</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_DISCO_Alternate_Price_Requirement__c</fullName>
        <label>SKU DISCO Alternate Price Requirement</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Del_Notif_Req__c</fullName>
        <label>SKU Del Notif Req</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Description__c</fullName>
        <description>Vendavo: v_vproduct.vlabel
RMS 
Item_master. short_desc</description>
        <label>SKU Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Disco_Alt_Req__c</fullName>
        <label>SKU Disco Alt Req</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Disco_Cust_Notif_Req__c</fullName>
        <label>SKU Disco Cust Notif Req</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Governed_By_Active_Written_Agreement__c</fullName>
        <description>SKU Governed By Active Written Agreement - to indicate if the target SKU fell under an active CSF</description>
        <label>SKU Governed By Active Written Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SKU_Last_Update__c</fullName>
        <description>Last time the SKU price was changed</description>
        <label>SKU Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SKU_Type__c</fullName>
        <label>SKU Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <externalId>true</externalId>
        <label>SKU</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRM_Basis_Point_Increase__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SRM Basis Point Increase</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SRM_Differential__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SRM Differential $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesPriceChangeEffDateApprMonth__c</fullName>
        <formula>IF((MONTH(Sales_Price_Change_Effective_Date_Approv__c)) = 1.0, 1.0, 
IF((MONTH(Sales_Price_Change_Effective_Date_Approv__c)) = 2.0, 1.0, 
IF((MONTH(Sales_Price_Change_Effective_Date_Approv__c)) = 3.0, 1.0, 
IF((MONTH(Sales_Price_Change_Effective_Date_Approv__c)) = 4.0, 2.0, 
IF((MONTH(Sales_Price_Change_Effective_Date_Approv__c)) = 5.0, 2.0, 
IF((MONTH(Sales_Price_Change_Effective_Date_Approv__c)) = 6.0, 2.0, 
IF((MONTH(Sales_Price_Change_Effective_Date_Approv__c)) = 7.0, 3.0, 
IF((MONTH(Sales_Price_Change_Effective_Date_Approv__c)) = 8.0, 3.0, 
IF((MONTH(Sales_Price_Change_Effective_Date_Approv__c)) = 9.0, 3.0, 
IF((MONTH(Sales_Price_Change_Effective_Date_Approv__c)) = 10.0, 4.0, 
IF((MONTH(Sales_Price_Change_Effective_Date_Approv__c)) = 11.0, 4.0, 
IF((MONTH(Sales_Price_Change_Effective_Date_Approv__c)) = 12.0, 4.0, 
null))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SalesPriceChangeEffDateApprMonth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesPriceChangeEffDateApprYear__c</fullName>
        <formula>(YEAR(Sales_Price_Change_Effective_Date_Approv__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SalesPriceChangeEffDateApprYear</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Price_Change_Effective_Date_Approv__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Price_Change_Effective_Date__c</fullName>
        <label>Sales Price Change Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SpendImpactValue__c</fullName>
        <formula>IF(Item_12_Month_Qty__c  &lt;&gt; 0,Total_Spend_Impact_12_Month__c/Item_12_Month_Qty__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SpendImpactValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subclass_Description__c</fullName>
        <label>Subclass Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subclass_Id__c</fullName>
        <label>Subclass Id</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount_not_passed_due_to_WA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Amount not passed due to WA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_not_passed_due_to_WA_restr1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Amount not passed due to WA restri</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_not_passed_due_to_WA_restr2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Amount not passed due to WA restri</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_not_passed_due_to_WA_restr3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Amount not passed due to WA restri</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_not_passed_due_to_WA_restri__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Amount not passed due to WA restri</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Impact__c</fullName>
        <formula>IF( NOT( ISNULL( Previous_Exception_Impact__c ) ) , ( Previous_Exception_Impact__c  +  Price_Exception_Revenue_Impact__c ), Price_Exception_Revenue_Impact__c)</formula>
        <label>Total Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Spend_Impact_12_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Spend Impact 12 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Spend_Impact_3_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Spend Impact 3 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Spend_Impact_6_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Spend Impact 6 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <description>Vendavo: v_vproduct.baseuom_vname
RMS
Item_master. standard_uom</description>
        <label>UOM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Frequency_Calendar_Period__c</fullName>
        <label>Update_Frequency_Calendar_Period</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Frequency_Date_1__c</fullName>
        <label>Update_Frequency_Date_1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Update_Frequency_Date_2__c</fullName>
        <label>Update_Frequency_Date_2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Update_Frequency_Date_3__c</fullName>
        <label>Update_Frequency_Date_3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Update_Frequency_In_Days__c</fullName>
        <label>Update_Frequency_In_Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Frequency_Other__c</fullName>
        <label>Update_Frequency_Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Frequency_Type__c</fullName>
        <label>Update_Frequency_Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Frequency__c</fullName>
        <label>Update Frequency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Timing_Action__c</fullName>
        <label>Update Timing Action</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Timing__c</fullName>
        <label>Update Timing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Proposed_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>User Proposed Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VCC_ENGINE_CONTROL_ID__c</fullName>
        <label>VCC ENGINE CONTROL ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_SKU_Changes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendavo_Processed_Date__c</fullName>
        <label>Vendavo Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendavo_Update_Date__c</fullName>
        <label>Vendavo_Update_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vendor_Letter_Eligible_No_Det__c</fullName>
        <label>Vendor_Letter_Eligible_No_Det</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_OEM_Letters_Required__c</fullName>
        <label>Vendor/OEM Letters Required</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WAPO_Cost_Change__c</fullName>
        <defaultValue>0</defaultValue>
        <label>WAPO Cost % Change</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WATD_Cost_Change1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>WATD Cost $ Change</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WATD_Cost_Change__c</fullName>
        <defaultValue>0</defaultValue>
        <label>WATD Cost % Change</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>XREF_REQUEST_ID__c</fullName>
        <externalId>true</externalId>
        <label>XREF_REQUEST_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>batchId__c</fullName>
        <label>batchId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Customer SKU Changes</label>
    <nameField>
        <label>Customer SKU Changes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer SKU Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>